--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <div class="recente-scores">
     <div class="top-2">
   <h2>Recent score</h2>
-     <button type="submit" class="btn">Refresh</button>
+     <button type="submit" class="Refresh">Refresh</button>
     </div>
   
 <table>
